kubernetes/network-policy/deny_all_connection.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-connection
  namespace: ns-2
spec:
  podSelector: {}
  policyTypes:
  - Ingress
